Fixed Code Blocks

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
           "type": "markdown",
           "state": {
             "file": "notes/Hyperlink Styling.md",
-            "mode": "source",
+            "mode": "preview",
             "source": false
           }
         }
@@ -131,11 +131,11 @@
   "active": "b36983278846fa79",
   "lastOpenFiles": [
     "notes/Hyperlink Styling.md",
+    "notes/Getting Lost.md",
     "notes/The Connections.md",
     "notes/Digital Gardens.md",
     "notes/Learning.md",
     "notes/index.md",
-    "notes/Getting Lost.md",
     "notes/Going Backwards.md",
     "assets/Pasted image 20220626133356.png",
     "assets/Pasted image 20220626133408.png",
