--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,15 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "66944350a782e9e7",
+        "id": "cf4d73024c7f1773",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "notes/LaTeX Test.md",
-            "mode": "source",
-            "source": true
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -72,7 +68,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "notes/LaTeX Test.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,7 +84,6 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "notes/LaTeX Test.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -116,7 +110,6 @@
             "state": {
               "type": "localgraph",
               "state": {
-                "file": "notes/LaTeX Test.md",
                 "options": {
                   "collapse-filter": false,
                   "search": "",
@@ -151,8 +144,9 @@
     "direction": "horizontal",
     "width": 446.10455322265625
   },
-  "active": "66944350a782e9e7",
+  "active": "cf4d73024c7f1773",
   "lastOpenFiles": [
+    "notes/LaTeX Test.md",
     "notes/Naming Conventions for Alkanes.md",
     "notes/Alkane.md",
     "notes/Hydrocarbons.md",
@@ -161,7 +155,6 @@
     "notes/How did the Indigenous Australians Get Here.md",
     "assets/Pasted image 20220805151547.png",
     "notes/Overview of Oceania by A. P. Elkin.md",
-    "notes/Determinism.md",
-    "notes/Indigenous Dreaming.md"
+    "notes/Determinism.md"
   ]
 }
