--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,37 +4,25 @@
     "type": "split",
     "children": [
       {
-        "id": "e6d2608a4470338d",
+        "id": "90f3787a174cac02",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "notes/Creation of Oils and Gases.md",
-            "mode": "preview",
-            "source": true
-          }
-        }
-      },
-      {
-        "id": "4b8422f47c63db8a",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "about.md",
+            "file": "notes/Hydrocarbons.md",
             "mode": "source",
             "source": true
           }
         }
       },
       {
-        "id": "f34fe210a0327d0f",
+        "id": "9ddb9bf8f3e00930",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "notes/Coal.md",
-            "mode": "preview",
+            "file": "notes/Alkene.md",
+            "mode": "source",
             "source": true
           }
         }
@@ -95,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "about.md",
+                "file": "notes/Alkene.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,7 +100,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "about.md",
+                "file": "notes/Alkene.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -148,7 +136,7 @@
             "state": {
               "type": "localgraph",
               "state": {
-                "file": "about.md",
+                "file": "notes/Alkene.md",
                 "options": {
                   "collapse-filter": false,
                   "search": "",
@@ -165,7 +153,7 @@
                       "query": "tag:#raw",
                       "color": {
                         "a": 1,
-                        "rgb": 14725458
+                        "rgb": 11026150
                       }
                     }
                   ],
@@ -179,7 +167,7 @@
                   "repelStrength": 20,
                   "linkStrength": 1,
                   "linkDistance": 250,
-                  "scale": 0.2990729109992058,
+                  "scale": 0.09209835081089884,
                   "close": true
                 }
               }
@@ -189,20 +177,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 446.10455322265625,
-    "collapsed": true
+    "width": 446.10455322265625
   },
-  "active": "4b8422f47c63db8a",
+  "active": "9ddb9bf8f3e00930",
   "lastOpenFiles": [
-    "notes/Creation of Oils and Gases.md",
-    "notes/Coal.md",
+    "notes/Hydrocarbons.md",
     "notes/Alkene.md",
-    "notes/Socrates.md",
-    "notes/Philosophy.md",
-    "notes/Crude Oil.md",
-    "notes/index.md",
-    "notes/Fractional Distillation.md",
-    "about.md",
-    "assets/Notes-Coalition.png"
+    "notes/Alkyne.md",
+    "notes/Alkane.md",
+    "notes/Testing.md",
+    "notes/MathJax.md",
+    "notes/Greenhouse Gases.md",
+    "notes/Greenhouse Effect.md",
+    "notes/Effect on Environment.md",
+    "notes/Fossil Fuels.md"
   ]
 }
