--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,27 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "90f3787a174cac02",
+        "id": "455cee592d489273",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "notes/Hydrocarbons.md",
-            "mode": "source",
-            "source": true
-          }
-        }
-      },
-      {
-        "id": "9ddb9bf8f3e00930",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "notes/Alkene.md",
-            "mode": "source",
-            "source": true
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -83,7 +67,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "notes/Alkene.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -100,7 +83,6 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "notes/Alkene.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -136,7 +118,6 @@
             "state": {
               "type": "localgraph",
               "state": {
-                "file": "notes/Alkene.md",
                 "options": {
                   "collapse-filter": false,
                   "search": "",
@@ -179,17 +160,17 @@
     "direction": "horizontal",
     "width": 446.10455322265625
   },
-  "active": "9ddb9bf8f3e00930",
+  "active": "455cee592d489273",
   "lastOpenFiles": [
+    "about.md",
     "notes/Hydrocarbons.md",
     "notes/Alkene.md",
+    "notes/Coal.md",
     "notes/Alkyne.md",
     "notes/Alkane.md",
     "notes/Testing.md",
     "notes/MathJax.md",
     "notes/Greenhouse Gases.md",
-    "notes/Greenhouse Effect.md",
-    "notes/Effect on Environment.md",
-    "notes/Fossil Fuels.md"
+    "notes/Greenhouse Effect.md"
   ]
 }
