--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,10 +4,10 @@
     "type": "split",
     "children": [
       {
-        "id": "455cee592d489273",
+        "id": "5368a6e788505d51",
         "type": "leaf",
         "state": {
-          "type": "empty",
+          "type": "graph",
           "state": {}
         }
       }
@@ -148,7 +148,7 @@
                   "repelStrength": 20,
                   "linkStrength": 1,
                   "linkDistance": 250,
-                  "scale": 0.09209835081089884,
+                  "scale": 0.37908532819505647,
                   "close": true
                 }
               }
@@ -160,17 +160,17 @@
     "direction": "horizontal",
     "width": 446.10455322265625
   },
-  "active": "455cee592d489273",
+  "active": "5368a6e788505d51",
   "lastOpenFiles": [
+    "notes/Melting and Boiling points - ane, ene, yne.md",
+    "notes/Greenhouse Gases.md",
+    "index.md",
+    "notes/Greenhouse Effect.md",
     "about.md",
     "notes/Hydrocarbons.md",
     "notes/Alkene.md",
     "notes/Coal.md",
     "notes/Alkyne.md",
-    "notes/Alkane.md",
-    "notes/Testing.md",
-    "notes/MathJax.md",
-    "notes/Greenhouse Gases.md",
-    "notes/Greenhouse Effect.md"
+    "notes/Alkane.md"
   ]
 }
