--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -19,7 +19,7 @@
               "leaf": "b459e6773da21d4c",
               "group": null,
               "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/Naming Convention for Alkene.md\",\"mode\":\"source\",\"source\":true}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":14,\"ch\":12},\"to\":{\"line\":14,\"ch\":12}},\"scroll\":4.876429744517083}"
+              "eState": "{\"cursor\":{\"from\":{\"line\":7,\"ch\":377},\"to\":{\"line\":7,\"ch\":377}},\"scroll\":0}"
             }
           ]
         },
